# ROS2-Thermal-and-RGBD-sensors_ws

./: .gitignore  .gitmodules  COMANDOS.txt  README.md  README_sensors.md
install/: local_setup.sh  setup.sh
install/custom_nodes/share/custom_nodes/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/custom_nodes/share/custom_nodes/launch/: frontend.py  frontend_theme.py  frontend_theme2.py  frontend_theme3.py  launch_thermalcamera.py  main_launch.py  main_launch2.py  test.py
install/custom_nodes/share/custom_nodes/scripts/: temperature_cswi_calculation.py
log/: latest_build
src/Calibration/: CameraCalibration.py  PersonalizedPlots.py  README.md  ReadmeGenerator.py  avg_homography_mtx.py  comprobar_homographia.py  comprobar_homographia_externa.py  extrinsic_rgb.py  extrinsic_rgb2.py  extrinsic_thermal.py  extrinsic_thermal2.py  homography_mtx.py  point_reference.py  test.py
src/CalibrationPackage/: CornerCorrector.py  FolderManager.py  Homography.py  README.md
src/Saving/: calibration_node.py  img_acq_timer.py  (+5 more)
src/custom_nodes/: CMakeLists.txt
src/custom_nodes/Homography/: average_homography2.txt  average_homography_640.txt  config.xml
src/custom_nodes/launch/: APP.py  main_launch.py  rviz2_config3.rviz  thermal_launch.py
src/custom_nodes/launch/nodos/: CalculationOptions.py  NDVIOptions.py  NodeLauncher.py  NodeOptions.py  RealsenseOptions.py  ThermalCameraOptions.py  YOLOOptions.py  __init__.py
src/custom_nodes/scripts/: modify_xml.py  temperature_cswi_calculation.py  test.py
(+144 files in other folders)
